[package]
name = "clipper2"
version = "0.5.1"
authors = ["Fredrik Söderström <tirithen@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/tirithen/clipper2"
documentation = "https://docs.rs/clipper2/"
description = "A polygon Clipping and Offsetting library for Rust."
keywords = ["polygon", "boolean", "clip", "clipper", "clipper2"]
categories = ["algorithms"]

[features]
default = ["doc-images"]
doc-images = []
serde = ["dep:serde", "clipper2c-sys/serde"]

[dependencies]
libc = "0.2"
clipper2c-sys = "0.1.4"
thiserror = "2"
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
macroquad = "0.4.13"
embed-doc-image = "0.1"
serde_json = "1"

[package.metadata.docs.rs]
# docs.rs uses a nightly compiler, so by instructing it to use our `doc-images` feature we
# ensure that it will render any images that we may have in inner attribute documentation.
features = ["doc-images"]
