[package]
name = "clipper2"
version = "0.6.0"
authors = ["Fredrik Söderström <tirithen@gmail.com>"]
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/tirithen/clipper2"
documentation = "https://docs.rs/clipper2/"
description = "A safe, idiomatic Rust API for 2D polygon boolean clipping (intersection, union, difference, XOR), offsetting (inflate/deflate), Minkowski sum/difference, simplification, area, and point-in-polygon, on top of Clipper2."
keywords = ["polygon", "clipping", "offset", "minkowski", "clipper2"]
categories = ["algorithms", "graphics", "science::geo"]

[features]
default = ["doc-images"]
doc-images = []
serde = ["dep:serde", "clipper2c-sys/serde"]

[dependencies]
libc = "0.2"
clipper2c-sys = "0.2"
thiserror = "2"
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
macroquad = "0.4.13"
embed-doc-image = "0.1"
serde_json = "1"

[package.metadata.docs.rs]
# docs.rs uses a nightly compiler, so by instructing it to use our `doc-images` feature we
# ensure that it will render any images that we may have in inner attribute documentation.
features = ["doc-images"]
